# BIMMY

./: .gitignore  CMakeLists.txt  README.md
include/: bimmy_types.hpp  camera.hpp  mesh.hpp  raycast.hpp  renderer.hpp
shaders/: bimmy.frag  bimmy.vert
src/: main.cpp  mesh.cpp  renderer.cpp
